--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="normalize.css">
     <!-- Css file -->
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
     <!-- Font Awesome icons version 5 -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <!-- Google Fonts -->
@@ -282,7 +282,7 @@
                 <img src="imgs/gallery-03.jpg" alt="">
             </div>
             <div class="photo">
-                <img src="/imgs/gallery-04.png" alt="">
+                <img src="imgs/gallery-04.png" alt="">
             </div>
             <div class="photo">
                 <img src="imgs/gallery-05.jpg" alt="">
@@ -1164,7 +1164,7 @@
         <i class="fas fa-angle-up to-top"></i>
     </button>
     <!-- Javascript file -->
-    <script src="/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html
