--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <div class="container">
         <!-- Header Section -->
         <header>
-            <h4 class="logo">
-                Izourne
-            </h4>
+            <a class="logo" href="#">
+                <img src="imgs/Izourne-logo.png" alt="">
+            </a>
             <ul class="nav">
                 <li>
                     <a href="#articles">
@@ -1061,7 +1061,8 @@
                 <input type="name" name="name" id="" placeholder="Your Name">
                 <input type="email" name="mail" id="" placeholder="Your Email">
                 <input type="phone" name="name" id="" placeholder="Your Phone">
-                <textarea name="needs" id="" cols="30" rows="10" placeholder="Tell Us About Your Needs"></textarea>
+                <textarea name="needs" id="" cols="30" rows="10" placeholder="Tell Us About Your Needs"
+                    required></textarea>
                 <input type="button" name="button" value="Send">
             </form>
         </div>
