--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Rubik+Spray+Paint&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Izourne</title>
 </head>
@@ -21,9 +22,9 @@
     <div class="container">
         <!-- Header Section -->
         <header>
-            <a class="logo" href="#">
-                <img src="imgs/Izourne-logo.png" alt="">
-            </a>
+            <h4 class="logo" href="#">
+                Izourne
+        </h4>
             <ul class="nav">
                 <li>
                     <a href="#articles">
@@ -114,7 +115,7 @@
         <div class="container">
             <div class="intro">
                 <h3>
-                    Welcome, To Izourne World
+                    Welcome, To <span>Izourne World</span>
                 </h3>
                 <p>
                     Here Iam gonna share everything about my life.
