i added a width animation when scrolling in the skills section

--- a/index.html
+++ b/index.html
@@ -654,19 +654,19 @@
             <div class="web-skills">
                 <h3>HTML</h3>
                 <div class="html full">
-                    <div class="some"></div>
+                    <div class="fill" data-fill="80%"></div>
                 </div>
                 <h3>CSS</h3>
                 <div class="css full">
-                    <div class="some"></div>
+                    <div class="fill" data-fill="85%"></div>
                 </div>
                 <h3>JAVA SCRIPT</h3>
                 <div class="js full">
-                    <div class="some"></div>
+                    <div class="fill" data-fill="70%"></div>
                 </div>
                 <h3>PYTHON</h3>
                 <div class="py full">
-                    <div class="some"></div>
+                    <div class="fill" data-fill="80%"></div>
                 </div>
             </div>
         </div>
