i added a Javascript countdown in the events section

--- a/index.html
+++ b/index.html
@@ -741,32 +741,32 @@
                 <div class="counter">
                     <div class="timer">
                         <div class="days">
-                            <h3>
-                                178
+                            <h3 data-time="178">
+                                0
                             </h3>
                             <span>
                                 Days
                             </span>
                         </div>
                         <div class="Hours">
-                            <h3>
-                                40
+                            <h3 data-time="40">
+                                0
                             </h3>
                             <span>
                                 Hours
                             </span>
                         </div>
                         <div class="Minutes">
-                            <h3>
-                                15
+                            <h3 data-time="15">
+                                0
                             </h3>
                             <span>
                                 Minutes
                             </span>
                         </div>
                         <div class="Seconds">
-                            <h3>
-                                25
+                            <h3 data-time="25">
+                                0
                             </h3>
                             <span>
                                 Seconds
